index html updated
header created

--- a/index.html
+++ b/index.html
@@ -11,7 +11,40 @@
   </head>
   <body>
 
-    <section class="grid-con">
+    <header class="grid-con">
+      <section class="col-span-full m-col-start-2 m-col-end-12">
+
+        <img src="img/logo.svg" alt="logo" class="logo">
+
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+
+      </section>
+    </header>
+
+    <main>
+
+      <section class="grid-con">
+        <div class="col-span-full m-col-span-full headings" >
+          <h2>Pulsebeats</h2>
+          <p>Feel the pulse</p>
+        </div>
+
+        <div>
+          <p></p>
+        </div>
+
+
+      </section>
+
+
+
+    <!-- <section class="grid-con">
 
       <div class="col-span-full m-col-span-full">
     <model-viewer id="model" src="model/earbud.gltf" ar ar-modes="webxr scene-viewer quick-look" ios-src="model/earbud.usdz" camera-controls poster="img/poster.webp" shadow-intensity="1" environment-image="img/aircraft_workshop_01_1k.hdr" exposure="1.7" camera-orbit="52.34deg 88.29deg 874.8m" field-of-view="30deg">
@@ -41,8 +74,31 @@
     </model-viewer> 
 
   </div>
-  </section> 
+  </section>  -->
   <!-- Loads <model-viewer> for browsers: -->
+
+  </main>
+
+    <footer class="grid-con">
+      <section class="col-span-full m-col-start-2 m-col-end-12">
+
+        
+
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+
+        <img src="img/logo.svg" alt="logo" class="footer-logo">
+
+      </section>
+
+    </footer>
+
+
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
     <script src="js/main.js"></script>
   </body>
