--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
           <p>Feel the pulse</p>
         </div>
 
-        <div>
-          <p></p>
+        <div class="col-span-full m-col-start-3 m-col-end-11">
+          <p>Pulsebeats delivers a powerful audio experience with cutting-edge design and crystal-clear sound. Built for those who live life on the move, Pulsebeats earbuds offer premium sound quality, comfort, and durability to keep you connected and immersed in your favorite beats all day long.</p>
+          <p>Pulsebeats is all about redefining the way you experience sound. Combining sleek aesthetics with top-tier audio engineering, our earbuds are designed for comfort and built to last. With advanced noise-cancellation, long-lasting battery life, and intuitive touch controls, Pulsebeats elevates your listening experience, whether you're working out, commuting, or relaxing. Experience pure, unfiltered sound quality with Pulsebeats—designed to keep you in tune with every beat, every moment.</p>
         </div>
 
 
