--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Accessories</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ACCESSORIES</a></li>
+            <li><a href="#">CONTACT</a></li>
           </ul>
         </nav>
 
