--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 
-    <!-- <section class="grid-con">
+    <section class="grid-con">
 
       <div class="col-span-full m-col-span-full">
     <model-viewer id="model" src="model/earbud.gltf" ar ar-modes="webxr scene-viewer quick-look" ios-src="model/earbud.usdz" camera-controls poster="images/poster.webp" shadow-intensity="1" environment-image="images/aircraft_workshop_01_1k.hdr" exposure="1.7" camera-orbit="52.34deg 88.29deg 874.8m" field-of-view="30deg">
@@ -97,14 +97,14 @@
             View in your space
         </button>
         <div id="ar-prompt">
-            <images src="images/ar_hand_prompt.png">
+            <img src="images/ar_hand_prompt.png">
         </div>
 
     </model-viewer> 
 
   </div>
-  </section>  -->
-  <!-- Loads <model-viewer> for browsers: -->
+  </section> 
+  
 
   </main>
 
@@ -121,9 +121,13 @@
           </ul>
         </nav>
 
-        <img src="images/logo.svg" alt="logo" class="footer-logo">
 
-      </section>
+    </section>
+
+    <div class="col-span-full m-col-span-full">
+      <p>All rights reserved</p>
+      <p>&copy; Pulsebeats 2023</p>
+    </div>
 
     </footer>
 
